# python-mystrom

./: CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  cli.py  example-bulb.py  example-get-data-bulb.py  example-switch.py  example.py  mystrom-config.py  pyproject.toml  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml  pythonpackage.yml
examples/: example-bulb-hsv.py  example-bulb.py  example-discovery.py  example-get-data-bulb.py  example-get-device-info.py  example-pir.py  example-switch-token.py  example-switch-with-token.py  example-switch-zero.py  example-switch.py
pymystrom/: __init__.py  bulb.py  cli.py  device.py  device_types.py  discovery.py  exceptions.py  pir.py  switch.py  switch_zero.py
tests/: __init__.py  test_bulb.py  test_pir.py  test_switch.py  test_switch_missing_type.py
